--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         h1 {
             border: 1px solid #ddd;
             text-align: right;
+            width: 300px;
             
         }
         div {
-            width: 300px;
+            width: 400px;
             padding: 10px 30px;
         }
 
@@ -27,6 +28,7 @@
 
         input {
             padding: 10px 30px;
+            font-size: 20px;
         }
     </style>
 </head>
